add page of register

--- a/version-0.0/pages/index.html
+++ b/version-0.0/pages/index.html
@@ -28,7 +28,7 @@
 					<div class="row">
 						<!-- logo-->
 						<div class="col-lg-1 col-md-1 logo wow rubberBand" data-wow-delay="1s">  
-							<a href="index.html"><img src="img/logo.png" alt="logo.png"/></a>
+							<a href="../index.html"><img src="img/logo.png" alt="logo.png"/></a>
 						</div>
 						<!-- 导航-->
 						<div class="col-lg-6 col-md-6 nav wow flipInX" data-wow-delay="0.3s">  
@@ -51,7 +51,7 @@
 						<div class="col-lg-3 col-md-3 col-lg-offset-2 col-md-offset-2 login">  
 							<a href="#">登录</a>
 							<span>|</span>
-							<a href="register.html">注册</a>
+							<a href="#">注册</a>
 						</div>
 					</div>
 				</div>
